# magicrs

./: .gitignore  Cargo.toml  Makefile  Procfile.linux-dev  Procfile.macos-dev  README.md  build_signing.pub  package.js  php_artifacts.json  production_build.js
bootloader/: Cargo.toml
bootloader/src/: main.rs
core_embedded/: Cargo.toml  build.rs
core_embedded/src/: main.rs
frontend/: .gitignore  cacheManager.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs  webpack.config.monaco.js
frontend/src/: atoms.ts  index.css  index.ts  licenses.ts  monacoSetup.js
frontend/src/bridge/: CustomUploader.ts  api.ts  implementation.ts  newCaptures.ts  proxy.ts
frontend/src/components/: App.tsx  CrashHandler.tsx
frontend/src/components/atoms/: Alert.tsx  Button.tsx  CodeEditor.tsx  Container.tsx  Description.tsx  Divider.tsx  ErrorPage.tsx  Header.tsx  Modal.tsx  ObjectBuilder.tsx
frontend/src/components/atoms/config/: Checkbox.tsx  ColorInput.tsx  Custom.tsx  Embedded.tsx  FolderOpen.tsx  Hotkey.tsx  LongText.tsx  NumberInput.tsx  Radio.tsx  Textbox.tsx
frontend/src/components/atoms/utils/async/: monacoSetup.d.ts  monacoSetup.js
frontend/src/components/embedded_customs/: elixire.domain_config.tsx  index.ts  shared.ts
frontend/src/components/molecules/: ConfigurationManagement.tsx  CustomUploaderBuilder.tsx  CustomUploaderButtons.tsx  LicenseBrowser.tsx  OpenSourceCredits.tsx
frontend/src/components/molecules/CustomUploaderBuilder/: ConfigEditor.tsx  FlowSuccess.tsx  index.tsx  shared.d.ts
frontend/src/components/molecules/CustomUploaderBuilder/option_types/: BooleanRow.tsx  index.ts
frontend/src/components/panels/: Captures.tsx  FileSaving.tsx  General.tsx  Hotkeys.tsx  Uploaders.tsx
frontend/src/components/panels/Uploaders/: customUploaders.tsx  index.tsx
frontend/src/components/panels/descriptions/: filename_format.md
frontend/src/hooks/: useDarkMode.ts  usePromise.ts
macos/: Info.plist.tmpl
magiccap_core/: Cargo.toml  build.rs
magiccap_core/src/: application_lock.rs  capture.rs  clipboard_actions.rs  data_dump.rs  database.rs  database_hooks.rs  hotkeys.rs  lib.rs  linux_shared.rs  macos_delegate.rs  mainthread.rs  notification.rs  ocr.rs  reload.rs  search_indexing.rs  statics.rs  tray.rs  unload.rs  utils.rs  windows_shared.rs
magiccap_core/src/config/: api.rs  captures_html.rs  fs_proxy.rs  mod.rs
magiccap_core/src/framebufferd/: mod.rs  shared.rs  token.rs
magiccap_core/src/macos/: macos.h  macos.m  mod.rs
magiccap_core/src/mainthread/: mod.rs  one_usage_channel.rs
magiccap_core/src/region_selector/: README.md  capture_monitor.rs  color_box.rs  color_picker.rs  editor_resizers.rs  engine.c  engine.m  engine.rs  event_loop_handler.rs  gl_abstractions.rs  image_manipulation_simd.rs  light_detector.rs  linux_x11.c  magnifier.rs  menu_bar.rs  mod.rs  region_selected.rs  texture_pack.rs  ui_renderer.rs  window_find.rs  window_line.rs
magiccap_core/src/region_selector/editors/: blur.rs  fastblur_rgba.rs  hollow_rectangle.rs  mod.rs  pixelate.rs  rectangle.rs  stickers.rs
magiccap_core/src/region_selector/fragments/: blur.frag  pixelate.frag
magiccap_core/src/temp_icon/: linux.rs  mod.rs  other.rs  shared.rs
magiccap_core/src/uploaders/: elixire.rs  ftp.rs  imgur.rs  mime.rs  mod.rs  s3.rs  sftp.rs  shell.rs  utils.rs
magiccap_core/src/uploaders/custom/: config_structure.rs  http.rs  http_expr_functions.rs  mod.rs  php.rs  php_bootstrapping.rs
magiccap_core/src/uploaders/frames/: elixire.domain_config.html
magiccap_core/src/video_capture/: gif_encoder.rs  linux_recorder.c  linux_recorder.rs  mod.rs  mp4_encoder.rs  recorder.rs  rgba_compressor.rs
uploaders_sandbox/: Cargo.toml
uploaders_sandbox/src/: lib.rs  upload.rs
(+5 files in other folders)
