[package]
name = "core_embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.9"
magiccap_core = { path = "../magiccap_core" }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-manifest = "1.3.1"
