[package]
name = "magiccap_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.30"

[dependencies]
once_cell = "1.19.0"
sqlite = "0.36.0"
home = "0.5.9"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.0"
num_cpus = "1.16.0"
chrono = "0.4.33"
rand = "0.8.5"
emojis = "0.6.1"
regex = "1.10.3"
uriparse = "0.6.4"
include_dir = "0.7.3"
ureq = { version = "2.9.4", features = ["json"] }
axohtml = { git = "https://github.com/IAmJSD/axohtml", commit = "bfba7" }
open = "5.0.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
copypasta = "0.10.1"
xcap = "0.0.10"
image = "0.25.1"
glfw = "0.56.0"
gl = "0.14.0"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.3.2", features = ["webview"] }
objc = "0.2.7"
objc_id = "0.1.1"
dispatch = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
native-dialog = "0.7.0"
notify-rust = "4.10.0"
webkit2gtk = "2.0.1"
tray-icon = "0.14.3"
