[package]
name = "magiccap_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.30"
chrono = "0.4.33"

[dependencies]
once_cell = "1.19.0"
sqlite = "0.36.0"
home = "0.5.9"
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.0"
num_cpus = "1.16.0"
chrono = "0.4.33"
rand = "0.8.5"
emojis = "0.6.1"
regex = "1.10.3"
uriparse = "0.6.4"
ureq = { version = "2.10.0", features = ["json"] }
axohtml = { git = "https://github.com/IAmJSD/axohtml" }
open = "5.0.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
xcap = "0.7.1"
image = "0.25.1"
glfw = "0.59.0"
gl = "0.14.0"
tray-icon = "0.14.3"
mime = "^0.3.17"
mime_guess = "^2.0.4"
mime-sniffer = "^0.1.2"
ureq_multipart = "^1.1.0"
dark-light = "^2.0.0"
rusttype = "^0.9.3"
tar = "^0.4.41"
flate2 = "1.0"
ocrs = "0.8.0"
rten = "0.10.0"
tantivy = "0.22"
native-dialog = "0.7.0"
suppaftp = { version = "^6", features = ["native-tls"] }
sha256 = "1.5.0"
sha2 = "0.10.8"
hmac = "0.12.1"
aws-config = "1.1.7"
aws-credential-types = "1.2.0"
aws-sdk-s3 = "1.40.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["http2", "client", "backports"] }
whoami = "1.5.1"
libc = "0.2.155"
evalexpr = "11.3.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
walkdir = "2.5"
zip = "2.1"
enigo = "0.2.1"
global-hotkey = { git = "https://github.com/IAmJSD/global-hotkey", rev = "95820baa" }
gif = "0.13.1"
reqwest = "0.12.28"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.3.2", features = ["webview"] }
objc = "0.2.7"
objc_id = "0.1.1"
dispatch = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.10.0"
wgpu = "26.0.1"
webkit2gtk = { version = "2.0.1", features = ["v2_22"] }
gdk = "0.18.0"
gtk = "0.18.1"
gio = "^0.18.0"
glib = "^0.18.0"
muda = "0.13.5"
mp4 = "0.14.0"
less-avc = "0.1.5"
pipewire = "0.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
webview2 = "0.1.4"
webview2-sys = "0.1.1"
windows = { version = "0.57", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
notify-rust = "4.10.0"
muda = "0.13.5"
native-windows-gui = "1.0.13"
webview2-com = "0.31.0"
webview2-com-sys = "0.31.0"
com = "0.2.0"

[features]
signature = []
